--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My site</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>Anna is the most beautiful woman in the world!</h1>
-    <hr>
-    <img src="anna.jpeg" alt="anna's profile picture">
+
   </body>
 </html>
