--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <hr size="5px">
     <img src="anna.jpeg" alt="anna's profile picture">
     <p>
-      I am a learning coding.
+      I am learning to code.
     </p>
   </body>
 </html>
